sass/home.scss
#home {
  .home__ep-sub-header {
    font-size: .6em;
  }
  
  .to-top {
    position: fixed;
    bottom: 0;
    right: 0;
    width: 65px;
    height: 65px;
    background: #fff;
    z-index: 9;
    cursor: pointer;
    // box-shadow: 0 0 1px rgba(32,14,17,.15);
    transition: all .4s cubic-bezier(.25, .46, .45, .94);
    border-left: 1px solid rgba(51,51,51,0.1);
    border-top: 1px solid rgba(51,51,51,0.1);
    transform: translateY(70px);

    .icon-uparrow {
      position: absolute;
      top: 50%;
      right: 50%;
      transform: translate(50%, -50%);
      font-size: 2.375rem;
      color: rgba(51,51,51,1);
      transition: margin-top .4s cubic-bezier(.25,.46,.45,.94);
    }

    .text {
      background: #fff;
      position: relative;
      width: 100%;
      z-index: 1;
      display: block;
      text-align: center;
      margin-top: 35px;
      padding-top: 5px;
      text-transform: uppercase;
      font-size: .6875rem;
      letter-spacing: 1px;
    }
  }

  .crumpledPaper {
    background-size: contain;
    width: 100%;
    position: fixed;
    left: 0;
    filter: opacity(50%);
  }

  text-transform: uppercase;
  text-align: center;

  .whiteBg {
    background-color: #FFF;
    position: relative;
  }

  h4.ep {
    margin-bottom: 10px;
    margin-top: 52.5px;
  }

  h4 {
    font-size: 2.75em;
    font-weight: 100;
    margin-bottom: 50px
  }

  header {
    font-weight: 100;

    h1 {
      font-size: 5em;
      font-weight: 100;
    }

    hr {
      border-top: 1px solid rgba(54,53,58,1);
    }

    img.blurryFace {
      margin: 20px auto 62.5px;
      width: 285px;
    }

    ul.navWrapper {
      list-style-type: none;
      padding: 0;
      margin: 0;

      li {
        display: inline-block;
        margin: 0 15px;

        a {
          color: rgba(54,53,58,1);

          &:hover,
          &:active,
          &:focus,
          &:visited {
            text-decoration: none;
            outline: none;
          }

          span {
            position: relative;
            display: block;

            &:before,
            &:after {
              content: '';
              position: absolute;
              width: 0%;
              height: 1px;
              top: 50%;
              margin-top: -0.5px;
              background: rgba(54,53,58,1);
            }

            &:before {
              left: -2.5px;
            }

            &:after {
              right: 2.5px;
              background: rgba(54,53,58,1);
              transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
            }

            &:hover:before {
              background: rgba(54,53,58,1);
              width: 100%;
              transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
            }

            &:hover:after {
              background-color: transparent;
              width: 100%;
              transition: 0s;
            }
          }
        }
      }
    }
  }

  section {
    margin: 125px 0;
  }

  section.band {
    p {
      width: 50%;
      margin: 0 auto;
      font-weight: 300;
    }
  }

  section.photos {
    .css-masonry {
      margin: 2rem auto;
      width: 285px;
      max-width: 1200px;
      column-gap: .5em;
      column-count: 1;

      .item {
        display: inline-block;
        width: 100%;
        overflow: hidden;
        margin-bottom: .2em;

        img {
          width: 100%;
          height: auto;
          display: block;
        }
      }
    }
  }

  section.shows {
    table {
      // border: 1px solid #ccc;
      border-collapse: collapse;
      margin: 0;
      padding: 0;
      width: 70%;
      table-layout: fixed;
      margin: 0 auto;


    }

    table tr {
      // background: #f8f8f8;
      border-bottom: 1px solid rgba(54,53,58,1);
      padding: .35em;
    }

    tr.shows__no-border-bottom {
      border-bottom: none !important;

      .shows__no-shows-desktop {
        text-decoration: line-through;
      }
    }

    table th,
    table td {
      padding: .625em;
      text-align: left;
    }

    table th {
      font-size: .85em;
      letter-spacing: .1em;
      text-transform: uppercase;
    }

    table .location {
      text-align: right;
    }

    .mobile {
      display: none;
    }

    @media screen and (max-width: 600px) {
      table {
        display: none;
      }

      .mobile {
        display: block;
        text-align: left;

        .shows__no-shows-mobile {
          text-align: center;
          text-decoration: line-through;
        }

        .dateWrapper {
          display: inline-block;
          text-align: center;
          background-color: rgba(51,51,51,1);
          color: #fff;
          width: 50px;
          height: 50px;
          padding: 5px 0;
          float: left;
        }

        .venueLocationWrapper {
          position: relative;
          left: 10px;
        }
      }
    }
  }

  section.contact {
    a.email {
      color: rgba(54,53,58,1);
      text-decoration: none;
      position: relative;
      top: 50px;
    }

    ul.social {
      padding: 0;
      list-style-type: none;
      margin: 0;

      li {
        display: inline-block;
        margin: 0 15px;

        a {
          text-decoration: none;
          color: rgba(54,53,58,1);

          &:hover {
            color: rgba(54,53,58,1);
          }

          img {
            width: 20px;
            position: relative;
            top: -3px;
            border-radius: 50%;
          }

          i {
            font-size: 20px;
            color: #000;
          }
        }
      }
    }
  }
}

